k8s/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-manager
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: asset-manager-staging-ksa
      containers:
        - name: asset-manager
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: asset-manager-staging-secrets
